--- a/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/App.config
+++ b/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/App.config
@@ -8,10 +8,7 @@
     
     <connectionStrings>
         <add name="Asteroid_Project_ManagerAPP.Properties.Settings.APM_DATABASEConnectionString"
-            connectionString="Data Source=DESKTOP-G9JCH3G;Initial Catalog=APM_DATABASE;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="Asteroid_Project_ManagerAPP.Properties.Settings.APM_DATABASEConnectionString1"
-            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=APM_DATABASE;Integrated Security=True"
+            connectionString="Data Source=25.3.143.231;Initial Catalog=APM_DATABASE;Persist Security Info=True;User ID=admin;Password=1234"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
