--- a/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/App.config
+++ b/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/App.config
@@ -7,8 +7,8 @@
     </configSections>
     
     <connectionStrings>
-        <add name="Asteroid_Project_ManagerAPP.Properties.Settings.APM_DATABASEConnectionString"
-            connectionString="Data Source=25.3.143.231;Initial Catalog=APM_DATABASE;Persist Security Info=True;User ID=admin;Password=1234"
+        <add name="ConnectionStringAPM"
+            connectionString="Data Source=25.3.143.231;Initial Catalog=APM_DATABASE;Persist Security Info=True;User ID=admin;Password=aylinalp1234"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
