--- a/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP.csproj
+++ b/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.ServiceModel" />
@@ -85,6 +86,12 @@
     <Compile Include="Forms\calisan_kayit.Designer.cs">
       <DependentUpon>calisan_kayit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\connectAPM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\connectAPM.Designer.cs">
+      <DependentUpon>connectAPM.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\deadline.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,7 +116,6 @@
     <Compile Include="Forms\proje_guncelle.Designer.cs">
       <DependentUpon>proje_guncelle.cs</DependentUpon>
     </Compile>
-    <Compile Include="FUNCTIONS.cs" />
     <Compile Include="Forms\gorev.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +172,14 @@
     <Compile Include="Forms\projeEkleme.Designer.cs">
       <DependentUpon>projeEkleme.cs</DependentUpon>
     </Compile>
+    <Compile Include="Scripts\Form\FormManager.cs" />
+    <Compile Include="Scripts\Form\Status.cs" />
+    <Compile Include="Scripts\SQL\SqlConnections.cs" />
+    <Compile Include="Scripts\SQL\SqlQueries.cs" />
+    <Compile Include="Scripts\SQL\SqlSetQueries.cs" />
+    <Compile Include="Scripts\Tools\CryptographyFunctions.cs" />
+    <Compile Include="Scripts\Tools\DateFunctions.cs" />
+    <Compile Include="Scripts\Tools\Tools.cs" />
     <EmbeddedResource Include="Forms\AnaForm.resx">
       <DependentUpon>AnaForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -183,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\calisan_kayit.resx">
       <DependentUpon>calisan_kayit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\connectAPM.resx">
+      <DependentUpon>connectAPM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\deadline.resx">
       <DependentUpon>deadline.cs</DependentUpon>
