--- a/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/App.config
+++ b/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/App.config
@@ -7,12 +7,11 @@
     </configSections>
     
     <connectionStrings>
-        <add name="ConnectionStringAPM"
-            connectionString="Data Source=25.3.143.231;Initial Catalog=APM_DATABASE;Persist Security Info=True;User ID=admin;Password=aylinalp1234"
-            providerName="System.Data.SqlClient" />
+        <add name="ConnectionStringAPM" connectionString="" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+      
     </startup>
  
     <userSettings>
