--- a/Asteroid_Project_ManagerCEO/Asteroid_Project_ManagerCEO/App.config
+++ b/Asteroid_Project_ManagerCEO/Asteroid_Project_ManagerCEO/App.config
@@ -6,12 +6,9 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="Asteroid_Project_ManagerCEO.Properties.Settings.APM_DATABASEConnectionString"
-            connectionString="Data Source=DESKTOP-G9JCH3G;Initial Catalog=APM_DATABASE;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="Asteroid_Project_ManagerCEO.Properties.Settings.APM_DATABASEConnectionString1"
-            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=APM_DATABASE;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+      <add name="ConnectionStringAPM"
+          connectionString="Data Source=25.3.143.231;Initial Catalog=APM_DATABASE;Persist Security Info=True;User ID=admin;Password=aylinalp1234"
+          providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
